--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <div class="container-fluid" style="max-width: 700px;">
 
-  <div class="row">
+  <div class="row-fluid">
     <div class="col-lg-12">
       <div class="page-header" style="padding: 1px 10px 0px 120px; background-repeat: no-repeat; background-size: 100px 100px; background-image: url('./assets/images/burger01.png');">
         <h1><strong>Eat da Burger!</strong></h1>
@@ -9,7 +9,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row-fluid">
     <div class="col-lg-12">
       <form class="serve-burger">
         <div class="panel panel-default">
@@ -31,42 +31,37 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row-fluid">
     <div class="col-lg-12">
       <div class="panel panel">
         <div class="panel-heading" style="color: #FFFFFF; background-color: #666666;">
           <h4 style="padding-left: 15px;">Eat da Burger!!</h4>
         </div>
         <div class="panel-body" style="background-color: #CCCCCC; padding: 30px;">
-          {{!-- <ul class="list-group"> --}}
-            {{#each burgers}}
-              {{#unless eaten}}
-                {{> burgers/uneaten-block}}
-              {{/unless}}
-            {{/each}}
-          {{!-- </ul> --}}
+          {{#each burgers}}
+            {{#unless eaten}}
+              {{> burgers/uneaten-block}}
+            {{/unless}}
+          {{/each}}
         </div>
       </div>
     </div>
   </div>
 
-  <div class="row">
+  <div class="row-fluid">
     <div class="col-lg-12">
       <div class="panel panel">
         <div class="panel-heading" style="color: #FFFFFF; background-color: #666666;">
           <h4 style="padding-left: 15px;">Forget about it...</h4>
         </div>
         <div class="panel-body" style="background-color: #CCCCCC; padding: 30px;">
-          {{!-- <ul class="list-group"> --}}
-            {{#each burgers}}
-              {{#if eaten}}
-                {{> burgers/eaten-block}}
-              {{/if}}
-            {{/each}}
-          {{!-- </ul> --}}
+          {{#each burgers}}
+            {{#if eaten}}
+              {{> burgers/eaten-block}}
+            {{/if}}
+          {{/each}}
         </div>
       </div>
-
     </div>
   </div>
 
