--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 
   <div class="row-fluid">
     <div class="col-lg-12">
-      <div class="page-header" style="padding: 1px 10px 0px 120px; background-repeat: no-repeat; background-size: 100px 100px; background-image: url('./assets/images/burger01.png');">
+      <div class="page-header" style="padding: 1px 10px 0px 120px; background-repeat: no-repeat; background-size: 100px 100px; background-image: url('/assets/images/burger01.png');">
         <h1><strong>Eat da Burger!</strong></h1>
         <h4>Add it ... Eat it ... Forget about it</h4>
       </div>
